welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:3: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if ( (a>=13 && a<=19) && (b>=13 && b<=19)) {
               ^